--- a/src/app/vendor-details/vendor-details.component.html
+++ b/src/app/vendor-details/vendor-details.component.html
@@ -1,7 +1,7 @@
 <div class="example-container mat-elevation-z8">
   <div class="example-loading-shade"
-       *ngIf="isLoadingResults">
-    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+       *ngIf="isShowingResult">
+    <mat-spinner *ngIf="isShowingResult"></mat-spinner>
   </div>
   <div class="button-row">
     <a mat-flat-button color="primary" [routerLink]="['/vendors']"><mat-icon>list</mat-icon></a>
