--- a/src/app/vendor-add/vendor-add.component.html
+++ b/src/app/vendor-add/vendor-add.component.html
@@ -1,8 +1,8 @@
 <div class="example-container mat-elevation-z8">
-  <div class="example-loading-shade"
+  <!-- <div class="example-loading-shade"
        *ngIf="isShowingResults">
     <mat-spinner *ngIf="isShowingResults"></mat-spinner>
-  </div>
+  </div> -->
   <div class="button-row">
     <a mat-flat-button color="primary" [routerLink]="['/vendors']"><mat-icon>list</mat-icon></a>
   </div>
